tests/bad/syntax/002-identifier-2.clap
val i#am_a_REALLY!nasty!value_identifier = _i_am_a_REALLY_pretty_value_identifier
